fixed webkit scrollbars

--- a/less/info.less
+++ b/less/info.less
@@ -1,7 +1,7 @@
 .info {
     position: absolute;
     top:0;
-    right: 0;
+    right: 10px;
     bottom:0;
     font-size: 12px;
     margin: 0;
